--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -185,10 +185,10 @@
         <div id="podiumBoutons">
             <div class="row row1">
                 <div id="creationPostes" class="boutonPodium col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-4 col-lg-2 col-lg-offset-4">
-                    <span>Création de postes sur 6 ans</span>
+                    <span>Création de postes de 2008 à 2013</span>
                 </div>
-                <div id="ratioEntreprises" class="boutonPodium col-xs-5 col-md-2 col-lg-2">
-                    <span>Ratio des entreprises</span>
+                <div id="variationNbEntreprises" class="boutonPodium col-xs-5 col-md-2 col-lg-2">
+                    <span>Variation du nombre d'entreprises de 2008 à 2013</span>
                 </div>
             </div>
             <div class="row">
@@ -196,10 +196,10 @@
                     <span>Nombre d'employés</span>
                 </div>
                 <div id="variationEffectifs" class="boutonPodium col-xs-4 col-md-2 col-lg-2">
-                    <span>Variation des effectifs sur 5 ans</span>
+                    <span>Variation des effectifs de 2008 à 2013</span>
                 </div>
-                <div id="ratioEffectiffs" class="boutonPodium col-xs-3 col-md-2 col-lg-2">
-                    <span>Ratio des effectifs</span>
+                <div id="creationEntreprises" class="boutonPodium col-xs-3 col-md-2 col-lg-2">
+                    <span>Création d'entreprises de 2008 à 2013</span>
                 </div>
             </div>
         </div>
