scroll one page fonctionnel (sauf pour l'iframe: voir retrigger parent event ou un truc du genre)

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -22,7 +22,7 @@
 
 
         {% include "./intro.html" %}
-        {% include "./dataviz1.html" %}
+        {% include "./dataviz1.html" %} 
         {% include "./salariesNum.html" %}
         
         <div id="comparison" class="page">
@@ -31,7 +31,8 @@
             width="100%"
             height="100%"
             scrolling="auto"
-            frameborder="0" >
+            frameborder="0" 
+            id= "lol">
             </iframe>
             <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 		  		<a id="nav1" rel="relativeanchor" href="#slidematchfinal">
