--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -182,28 +182,30 @@
                     </svg>
                 </div>
             </div>
+        <div id="selectionPodium" class="row">
+            Selectionnez un classement
+        </div>
         <div id="podiumBoutons">
             <div class="row row1">
                 <div id="creationPostes" class="boutonPodium col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-4 col-lg-2 col-lg-offset-4">
-                    <span>Création de postes de 2008 à 2013</span>
+                    <span>Creation de postes de 2008 a 2013</span>
                 </div>
                 <div id="variationNbEntreprises" class="boutonPodium col-xs-5 col-md-2 col-lg-2">
-                    <span>Variation du nombre d'entreprises de 2008 à 2013</span>
+                    <span>Variation du nombre d'entreprises de 2008 a 2013</span>
                 </div>
             </div>
             <div class="row">
                 <div id="nbEmployes" class="boutonPodium  col-xs-3 col-xs-offset-1  col-md-2 col-md-offset-3 col-lg-2 col-lg-offset-3">
-                    <span>Nombre d'employés</span>
+                    <span>Nombre d'employes</span>
                 </div>
                 <div id="variationEffectifs" class="boutonPodium col-xs-4 col-md-2 col-lg-2">
-                    <span>Variation des effectifs de 2008 à 2013</span>
+                    <span>Variation des effectifs de 2008 a 2013</span>
                 </div>
                 <div id="creationEntreprises" class="boutonPodium col-xs-3 col-md-2 col-lg-2">
-                    <span>Création d'entreprises de 2008 à 2013</span>
+                    <span>Creation d'entreprises de 2008 a 2013</span>
                 </div>
             </div>
         </div>
-   
     </div>
      <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
     	<a id="nav1" rel="relativeanchor" href="#slideoutro">
