fix matchfinal and tab

--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -17,18 +17,18 @@
         
         <div id="villesPodium" class="row">
             <div class="villes">
-                <div class="firstTown col-xs-5 col-md-5 col-lg-5">
-                    <div id="deuxiemeVille" class="col-xs-2 col-xs-offset-7 col-md-2 col-md-offset-7 col-lg-2 col-lg-offset-7">
+                <div class="secondTown villePod">
+                    <div id="deuxiemeVille" class="">
                         Second
                     </div>
                 </div>
-                <div class="col-xs-2 col-md-2 col-lg-2">
-                    <div id="premiereVille" class=" col-xs-10 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1">
+                <div class="firstTown villePod">
+                    <div id="premiereVille" class=" ">
                         Premier
                     </div>
                 </div>
-                <div class="col-xs-5 col-md-5 col-lg-5">
-                    <div id="troisiemeVille" class="col-xs-2 col-md-2 col-lg-2">
+                <div class="thirdTown villePod">
+                    <div id="troisiemeVille" class="">
                         Troisieme
                     </div>
                 </div>
