fix server and dataviz

--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -75,7 +75,7 @@
 										<div id="med1" class="short-div">
 											
 										</div>
-										<div>Entreprises en dizaines de milliers</div>
+										<div>Entreprises en centaines</div>
 									</div>
 									<div class="cell3 col-xs-5">
 										<div id="med2" class="short-div">
