--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 		    <div class="col-md-12" id="titleOutro">
-		        <img src="images/TitleVestiaire.png">
+		        <img src="images/TitleVestiaire2.png">
 		    </div>
 	    </div>
 	    <div id="pics">
