--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -80,7 +80,7 @@
 									<div class="cell3 col-xs-5">
 										<div id="med2" class="short-div">
 										</div>
-										<div>Effectifs en dizaines de milliers</div>
+										<div>Effectifs en milliers</div>
 									</div>
 								</div>
 								<div class="row">
