Last minute fixes on a few projects
Typos, and small bugs

--- a/citizen_press/html/index.html
+++ b/citizen_press/html/index.html
@@ -784,8 +784,8 @@
 			                </a>
 			            </div>
 			            <div class="partenaire col-xs-6 col-sm-2">
-			                <a href="http://www.univ-nantes.fr" title="UniversitÃ© de Nantes">
-			                    <img src="media/credit/univ-nantes.png"  class="img-responsive" alt="UniversitÃ© de Nantes">
+			                <a href="http://www.univ-nantes.fr" title="Université de Nantes">
+			                    <img src="media/credit/univ-nantes.png"  class="img-responsive" alt="Université de Nantes">
 	            			</a>
 	        			</div>
 		           </div>
@@ -809,13 +809,13 @@
 			            	<p>un projet issu des ateliers du </p>
 			            </div>
 			            <div class="partenaire col-xs-6 col-sm-2">
-			            	<a href="http://www.hyblab.fr">
+			            	<a href="http://www.hyblab.fr" title="Hyblab - Data Journalisme">
 	                    		<img src="media/credit/hyblab.png" class="img-responsive" alt="Hyblab - Data Journalisme">
 	                    	</a>
 	               		</div>
 	               		<div class="partenaire col-xs-6 col-sm-2">
-		                    <a href="http://www.ouestmedialab.fr" title="MediaLab">
-		                    	<img src="media/credit/ouest-medialab.png" class="img-responsive" alt="MediaLab">
+		                    <a href="http://www.ouestmedialab.fr" title="Ouest MediaLab">
+		                    	<img src="media/credit/ouest-medialab.png" class="img-responsive" alt="Ouest MédiaLab">
 	                    	</a>
 	               		</div>
 	            	</div>
