--- a/la_lettre_API/html/index.html
+++ b/la_lettre_API/html/index.html
@@ -28,11 +28,10 @@
                     Créés en 2005 - 2006 pour répondre à la nouvelle politique 
                     industrielle de la France, les pôles de compétitivité regroupent, 
                     sur un territoire clairement identifié, des petites et grandes entreprises, 
-                    des laboratoires de recherches et des établissements de formation, 
-                    prêtes à travailler ensemble sur des projets collaboratifs autour 
-                    d’une même thématique ciblée. Les pôles ont vocation à soutenir l’innovation. 
-                    Numérique, agroalimentaire, économie maritime, biotechnologies,
-                    industrie, végétal… les sept pôles de compétitivité basés en Bretagne et Pays 
+                    des laboratoires de recherche et des établissements de formation, 
+                    prêts à travailler ensemble sur des projets collaboratifs autour 
+                    d’une même thématique ciblée. Les pôles ont vocation à soutenir l’innovation Numérique, l'agroalimentaire, l'économie maritime, les biotechnologies,
+                    l"industrie, le végétal… les sept pôles de compétitivité basés en Bretagne et Pays 
                     de la Loire ont un impact non négligeable sur l’économie dans l’Ouest. 
                 </p>
                
