--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -121,7 +121,7 @@
 							<div class="panel panel-default ">
 								<div class="panel-heading" role="tab" id="headingTIC">
 									<a data-toggle="collapse" data-parent="#accordionCriteria" href="#collapseServInfo" aria-expanded="true" aria-controls="collapseServInfo">
-									Services info., développement logiciel
+									Services informatiques, développement logiciel
 									</a>
 								</div>
 								<div id="collapseServInfo" class="panel-collase collapsing" role="tabpanel" aria-labelledby="collapseServInfo"  >
@@ -205,7 +205,7 @@
 							<div class="panel panel-default ">
 								<div class="panel-heading" role="tab" id="headingTIC">
 									<a data-toggle="collapse" data-parent="#accordionCriteria" href="#collapseAgWeb" aria-expanded="true" aria-controls="collapseAgWeb">
-									Agences Web/Comm interactives
+									Agences Web/Communication interactives
 									</a>
 								</div>
 								<div id="collapseAgWeb" class="panel-collase collapsing" role="tabpanel"  aria-labelledby="collapseAgWeb">
@@ -225,7 +225,7 @@
 							<div class="panel panel-default ">
 								<div class="panel-heading" role="tab" id="headingTIC">
 									<a data-toggle="collapse" data-parent="#accordionCriteria" href="#collapseConMulti" aria-expanded="true" aria-controls="collapseConMulti">
-									Concepteurs multimédia/rédac Web
+									Concepteurs multimédia/rédaction Web
 									</a>
 								</div>
 								<div id="collapseConMulti" class="panel-collase collapsing" role="tabpanel" aria-labelledby="collapseConMulti">
@@ -260,7 +260,7 @@
 							<div class="panel panel-default ">
 								<div class="panel-heading" role="tab" id="headingTIC">
 									<a data-toggle="collapse" data-parent="#accordionCriteria" href="#collapseRef" aria-expanded="true" aria-controls="collapseRef">
-									Référencement, pub., marketing
+									Référencement, publicité, marketing
 									</a>
 								</div>
 								<div id="collapseRef" class="panel-collase collapsing" role="tabpanel"  aria-labelledby="collapseRef">
@@ -320,8 +320,12 @@
 			</a>
 			<div class="page-tabs row">
 				<div id="tabHeader" class="col-xs-offset-4 col-xs-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
-					COMPARATIF
+					COMPARATIF 
+					<div id="subtitleComparison"> DU NOMBRE D'ENTREPRISES </div>
 					<div id="yearHeader" >2008</div>
+					<div id="refreshButton" >
+						<span data-toggle="tooltip" data-placement="top" title="Rafraîchir les codes NAF" class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+					</div>
 				</div>
 				<div class="city col-xs-6 col-md-6 col-lg-6">
 					<div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
