--- a/le_journal_des_entreprises/html/intro.html
+++ b/le_journal_des_entreprises/html/intro.html
@@ -28,7 +28,7 @@
  
         <div id="inside2">		
         
-    		<h1 id="question">Quelle est la 2eme ville du numerique ?</h1>
+    		<h1 id="question">Quelle est la 2<SUP>eme</SUP> ville du numerique ?</h1>
 	
 		</div>
 			<div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
