Fixed a few typos in Nantes.fr project

--- a/nantes/html/stats.html
+++ b/nantes/html/stats.html
@@ -320,7 +320,7 @@
 			<img class="nuage" alt="nuage" src="img/stats/question1/nuages1.png" />
 			<img class="nuage" alt="nuage" src="img/stats/question1/nuages2.png" />
 			<div class="container">
-				<p class="question">QUI S'APPLIQUE LE PLUS DANS LA VIE SOCIALE ?</p>
+				<p class="question">QUI S'IMPLIQUE LE PLUS DANS LA VIE SOCIALE ?</p>
 				<div class="bouton_container">
 					<img class="bouton_guy question5" alt="Guy" src="img/misc/bouton_guy.png" />
 					<img class="bouton_josie question5" alt="Josie" src="img/misc/bouton_josie.png" />
