--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -118,6 +118,13 @@
 			</div>
 	    </div>
 	</div>
+	<div class="social col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4" >
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.lejournaldesentreprises.com/national/actualite/dossiers/la-battle-du-numerique-02-03-2015-249106.php" data-text="Quelle est la 2ème ville du numérique ?" data-via="JEntreprises" data-lang="fr" data-size="large" data-hashtags="FrenchTech, jde">Tweeter</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		<div class="fb-share-button" data-href="http://www.lejournaldesentreprises.com/national/actualite/dossiers/la-battle-du-numerique-02-03-2015-249106.php" data-layout="button"></div>
+		<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+		<script type="IN/Share" data-url="http://www.lejournaldesentreprises.com/national/actualite/dossiers/la-battle-du-numerique-02-03-2015-249106.php" data-counter="right"></script>
+	</div>
     <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 		<a id="nav1" rel="relativeanchor" href="#slide1">
 			<img class="img-circle img-responsive inline-block" src="images/backSlide.png" alt="page suivante"></img>
