--- a/le_journal_des_entreprises/html/intro.html
+++ b/le_journal_des_entreprises/html/intro.html
@@ -9,7 +9,7 @@
     		
     		
 			<p id="texteIntro" class="lead center-block">
-			    Alors que Paris triomphe loin devant les autres métropoles de France (la capitale représente 50% de l’économie numérique française), une battle fait rage... Lyon s'accroche au podium en accueillant le plus grand nombre d'entreprises, mais Lille en affiche la plus forte progression. Bordeaux, pas en reste, se voit attribuer la première place pour la part du numérique dans son économie. Quant à Nantes, elle progresse très fortement sur le nombre de salariés du numérique. Ce match effréné n'est pas fini, venez découvrir les résultats.
+				Alors que Paris triomphe loin devant les autres métropoles de France (la capitale représente 50% de l’économie numérique française), une battle fait rage... Lyon s'accroche au podium en accueillant le plus grand nombre d'entreprises, mais Lille en affiche la plus forte progression. Nantes, pas en reste, se voit attribuer la première place pour la part du numérique dans son économie. Ce match effréné n'est pas fini, venez découvrir les résultats.
 			</p>
 		
 		</div>
