--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -27,6 +27,73 @@
 								<div class="row">
 									<img src="images/logojde.png" alt="logo JDE"/>
 								</div>
+								<div class="partners">
+									<div class="row">
+										<div class="col-xs-offset-1 col-md-offset-1 col-lg-offset-1 col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.agrnantes.fr" title="A.G.R.">
+							                    <img src="logos/agr.png" alt="A.G.R." />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://web.polytech.univ-nantes.fr" title="Polytech">
+							                    <img src="logos/polytech.jpg" alt="Polytech" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.sciencescom.org" title="Science Com">
+							                    <img src="logos/sciences_com.jpg" alt="Science Com" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.univ-nantes.fr" title="Université de Nantes">
+							                    <img src="logos/universite_nantes.jpg" alt="Université de Nantes" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.etalab.gouv.fr" title="Etalab Gouv">
+							                    <img src="logos/etalab_gouv.png" alt="Etalab Gouv" />
+							                </a>
+							            </div>
+									</div>
+									<div class="row">
+										 <div class="col-xs-offset-1 col-md-offset-1 col-lg-offset-1 col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.nantesmetropole.fr" title="Nantes Métropole">
+							                    <img src="logos/nantes-metro.png" alt="Nantes Métropole" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.orange.fr" title="Orange">
+							                    <img src="logos/orange.jpg" alt="Orange" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://www.paysdelaloire.fr" title="Pays de la Loire">
+							                    <img src="logos/pdl.png" alt="Pays de la Loire" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/" title="Creative Commons">
+							                    <img src="logos/cc.jpg" alt="Creative Commons" />
+							                </a>
+							            </div>
+							            <div class="col-xs-2 col-md-2 col-lg-2">
+							                <a href="http://opensource.org" title="Open Source Initiative">
+							                    <img src="logos/osi.jpg" alt="Open Source Initiative" />
+							                </a>
+							            </div>
+									</div>
+									<div class="row">
+										<div class="lets_text">
+											<div class="col-xs-4 col-md-4 col-lg-4">un projet issu des ateliers du </div>
+							                <div class="col-xs-2 col-md-2 col-lg-2">
+							                    <a href="http://www.hyblab.fr"><img src="logos/hyblab.jpg" alt="Hyblab - Data Journalisme"></a>
+							                </div>
+							                <div class="col-xs-offset-1 col-md-offset-1 col-lg-offset-1 col-xs-2 col-md-2 col-lg-2">
+							                    <a href="http://www.ouestmedialab.fr" title="MediaLab"><img src="logos/medialab.png" alt="MediaLab" /></a>
+							                </div>
+							            </div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
