--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" type="text/css" href="css/styleoutro.css" />
     <link rel="stylesheet" type="text/css" href="css/stylematchfinal.css" />
     <link rel="stylesheet" type="text/css" href="css/styledataviz2.css" />
-    <script type="text/javascript" src="js/shadowbox/shadowbox.js"></script>
-    <script type="text/javascript">
-        Shadowbox.init({
-            handleOversize: "resize"
-        });
-    </script>
-        
 </head>
 <body>
-
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
 
         {% include "./intro.html" %}
         {% include "./dataviz1.html" %} 
