The place to bio fixes + audience tools for JDE

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -52,5 +52,21 @@
     <script type="text/javascript" src="js/dataviz1.js"></script>
     <script type="text/javascript" src="js/outro.js"></script>
     <script type="text/javascript" src="js/matchfinal.js"></script>
+    <!-- Marqueur XITI/ -->
+    <script type="text/javascript">
+    <!--
+    xtnv = document;        //parent.document or top.document or document        
+    xtsd = "http://logc1";
+    xtsite = "381358";
+    xtn2 = "114";        // level 2 site
+    xtpage = "Hyblab";  //page name (with the use of :: to create chapters)
+    xtdi = "";
+    //-->
+    </script>
+    <script type="text/javascript" src="http://www.lejournaldesentreprises.com/js/xiti.js"></script>
+    <noscript>
+    <img width="1" height="1" alt="" src="http://logc1.xiti.com/hit.xiti?s=381358&amp;s2=114&amp;p=Hyblab" />
+    </noscript>
+    <!-- /Marqueur XITI -->
 </body>
 </html>
