--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -112,22 +112,22 @@
 								<div class="row">
 									<div class="col-xs-4 col-md-4 col-lg-4">
 										<img src="images/gantssciencescom.png" alt="gants SC"/>
-										<p class="nameSC">Capucine</p>
-										<p class="nameSC">Amaury</p>
+										<p class="nameSC"><a href="http://fr.viadeo.com/fr/profile/capucine.gilbert">Capucine &nbsp; GILBERT <img src="images/viadeo.png" alt="viadeo logo"/></a></p>
+										<p class="nameSC">Amaury &nbsp; VOLEAU</p>
 										<img src="images/logosciencescom.png" alt="sciences com"/>
 									</div>
 									<div class="col-xs-4 col-md-4 col-lg-4">
 										<img src="images/gantsagr.png" alt="gants AGR"/>
-										<p class="nameAGR">Marion</p>
-										<p class="nameAGR">Zoe</p>
-										<p class="nameAGR">Yohann</p>
+										<p class="nameAGR">Marion  &nbsp; VIDELIN &nbsp; ROY </p>
+										<p class="nameAGR">Zoe &nbsp; LEVASSEUR</p>
+										<p class="nameAGR">Yohann &nbsp; GACEM</p>
 										<img src="images/logoagr.png" alt="logo agr"/>
 									</div>
 									<div class="col-xs-4 col-md-4 col-lg-4">
 										<img src="images/gantspolytech.png" alt="gants Polytech"/>
-										<p class="namePolytech">Claire</p>
-										<p class="namePolytech">Quentin</p>
-										<p class="namePolytech">Benjamin</p>
+										<p class="namePolytech"><a href="http://fr.linkedin.com/pub/claire-remy/7a/6a0/4ba">Claire &nbsp; REMY <img src="images/LinkedIn.jpg" alt="linkedin logo"/></a></p>
+										<p class="namePolytech"><a href="https://www.linkedin.com/in/quentingros">Quentin &nbsp; GROS <img src="images/LinkedIn.jpg" alt="linkedin logo"/></a></p>
+										<p class="namePolytech">Benjamin &nbsp; MOUDEN</p>
 										<img src="images/logopolytech.png" alt="logo polytech"/>
 									</div>
 								</div>
@@ -186,11 +186,11 @@
 	    </div>
 	</div>
 	<div class="social col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4" >
-		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.lejournaldesentreprises.com/national/numerique-et-la-premiere-metropole-regionale-est-25-02-2015-248845.php" data-text="Quelle est la 2ème ville du numérique ?" data-via="JEntreprises" data-lang="fr" data-size="large" data-hashtags="jde">Tweeter</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://datajournalisme2015.hyblab.fr/le_journal_des_entreprises/" data-text="Quelle est la 2ème ville du numérique ?" data-via="JEntreprises" data-lang="fr" data-size="large" data-hashtags="jde">Tweeter</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		<div class="fb-share-button" data-href="http://www.lejournaldesentreprises.com/national/numerique-et-la-premiere-metropole-regionale-est-25-02-2015-248845.php" data-layout="button"></div>
+		<div class="fb-share-button" data-href="http://datajournalisme2015.hyblab.fr/le_journal_des_entreprises/" data-layout="button"></div>
 		<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-		<script type="IN/Share" data-url="http://www.lejournaldesentreprises.com/national/numerique-et-la-premiere-metropole-regionale-est-25-02-2015-248845.php" data-counter="right"></script>
+		<script type="IN/Share" data-url="http://datajournalisme2015.hyblab.fr/le_journal_des_entreprises/" data-counter="right"></script>
 	</div>
     <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 		<a id="nav1" rel="relativeanchor" href="#slide1">
