Revert "Uncommited fixes"
This reverts commit 9b5983c72729bb53a4a9bc603f0e41ac3778cf0f.

--- a/we_demain/html/index.html
+++ b/we_demain/html/index.html
@@ -482,16 +482,10 @@ Selon vos habitudes de consommation, éteignez ou laissez les appareils électri
 						<a href="http://www.univ-nantes.fr/" ><img class="max_larg" src="img/universite_nantes.jpg" alt="logo universitenantes"/></a>
 					</div>
 					<div class="page9-conteneur29">
-						<a href="http://www.ademe.fr/particuliers-eco-citoyens/bureau/economiser-lelectricite"><img class="max_larg" src="img/ademe.svg" alt="logo ademe"/></a>
+						<a href="http://www.ademe.fr/particuliers-eco-citoyens/bureau/economiser-lelectricite" ><img class="max_larg" src="img/ademe.svg" alt="logo ademe"/></a>
 					</div>
 					<div class="page9-conteneur30">
-						<a href="http://www.adnouest.org/conso-it/" ><img class="max_larg" src="img/adnouest.jpg" alt="logo adnouest"/></a>
-					</div>
-					<div class="page9-conteneur31">
-						<a href="http://easyvirt.fr/" ><img class="max_larg" src="img/EasyVirt.png" alt="logo easyVit"/></a>
-					</div>
-					<div class="page9-conteneur32">
-						<a href="http://www.a2jv.fr/" ><img class="max_larg" src="img/A2JV.png" alt="logo A2JV"/></a>
+						<a href=http://www.adnouest.org/conso-it/ ><img class="max_larg" src="img/adnouest.jpg" alt="logo adnouest"/></a>
 					</div>
 				</div>  
 		  </section>
